# ai-parliament

./: .env.shared  .gitignore  README.md  dane_poslow.json  docker-compose.yml  main.py  politician.py  pyproject.toml  sejm_extractor.py  sejm_tools.py  setup.sh
ai/: README.md  pyproject.toml  requirements.txt  run_simulation.py  test_ai_service.py
ai/src/: __init__.py  prompts.yml
ai/src/agents/: __init__.py  agent_loader.py  agent_manager.py  base_agent.py  cache_manager.py  cached_wikipedia.py  graph_experiments.ipynb  main_agent.py  parallel_loader.py  party_agent.py  politician_agent.py  research_agent.py  supervisor_agent.py  test_party_agent.py  test_politician_agent.py  warm_cache.py
ai/src/api/: ai_service.py
ai/src/database/: __init__.py  vector_db.py
ai/src/simulation/: __init__.py  inter_party_debate.py  party_discussion.py  party_discussion_langgraph.py  voting_system.py
ai/src/utilities/: logger.py  prompt_manager.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  run_simulation.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  ai_service.py  routes.py
backend/src/utilities/: config_manager.py
data/: README.md
docs/: problem_description.md  soluction_description.md
frontend/: Dockerfile  README.md  pyproject.toml  requirements.txt
frontend/config/: app_config.yml  default_parties.yml  texts.yml
frontend/src/: app.py  config_manager.py
tests/: README.md  party_discussion_test.ipynb
tests/test_results/: party_discussion_result3.txt
tmp/: .gitignore  politician.py
(+1 files in other folders)
