[project]
name = "ai"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-openai",
    "langgraph",
    "langchainhub",
    "langchain-community",
    "langsmith",
    "pydantic",
    "wikipedia>=1.4.0",
    "faiss-cpu>=1.11.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
