[project]
name = "backend"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "langchain",
    "langchain-openai",
    "langgraph",
    "langchain-hub",
    "langchain-community",
    "langsmith",
    "pydantic"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"